--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <!-- ✅ SEO Meta Tags -->
   <title>Latest CCTV & Security System Updates | UP Security</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Read the latest posts from UP Security. Discover CCTV upgrade tips, maintenance advice, and smart intercom solutions to improve your home or business security.">
   <meta name="keywords" content="CCTV installation, security camera, alarm systems, intercom installation, CCTV maintenance, UP Security Australia, home security, business security, Dahua CCTV, Hikvision">
   <meta name="author" content="UP Security">
