--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
                             <div class="contact-area">
                                 <ul>
                                     <li><i class="fa fa-phone-square"></i>0401 702 148</li>
-                                    <li><i class="fa fa-envelope-o"></i>upsecprotection@gmail.com</li>
+                                    <li><i class="fa fa-envelope-o"></i>info@upsecurity.com.au</li>
                                 </ul>
                             </div> 
                     </div> 
@@ -257,7 +257,7 @@
 					 WA</address>
 					<p>
 						<i class="icon-phone"></i> 0401 702 148 <br>
-						<i class="icon-envelope-alt"></i> upsecprotection@gmail.com
+						<i class="icon-envelope-alt"></i> info@upsecurity.com.au
 					</p>
 				</div>
 			</div>
