--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
         <ul style="list-style:none;padding:0;font-size:16px;">
           <li><i class="fa fa-user"></i> <strong>Owner:</strong> Utpal Patel</li>
           <li><i class="fa fa-phone"></i> <strong>Phone:</strong> 0401 702 148</li>
-          <li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:upsecprotection@gmail.com">upsecprotection@gmail.com</a></li>
+          <li><i class="fa fa-envelope"></i> <strong>Email:</strong> <a href="mailto:info@upsecurity.com.au">info@upsecurity.com.au</a></li>
           <li><i class="fa fa-map-marker"></i> <strong>Address:</strong> UP Security, Calista, WA, Australia</li>
           <li><i class="fa fa-clock-o"></i> <strong>Hours:</strong> Mon–Sat: 10:00 AM – 6:00 PM</li>
         </ul>
